syntax = "proto3";

package network;

import "data.proto";
import "data_item.proto";
import "data_player.proto";
import "data_pet.proto";

/*********************************************************\
 ** General Packets
\*********************************************************/

message GDBootPacket {
  uint32 item_range_start = 1;
  uint32 item_range_end = 2;
  bytes ip = 3;
  uint32 channel = 4;
}

message GDSetupPacket {
  bytes public_ip = 1;
  uint32 channel = 2;
  uint32 listen_port = 3;
  uint32 p2p_port = 4;
  repeated uint32 maps = 5;
  repeated TPacketLoginOnSetup logins = 6;
  bool auth_server = 7;
  bool processor_core = 8;
}

message GDUpdateChannelStatusPacket {
  uint32 port = 1;
  uint32 status = 2;
}

message GDBlockExceptionPacket {
  uint32 cmd = 1;
  bytes login = 2;
}

message GDPlayerCountPacket {
  uint32 count = 1;
}

message GDReloadAdminPacket {
  bytes ip = 1;
}

message GDRecvShutdownPacket {
  int32 start_sec = 1;
  bool maintenance = 2;
  int32 maintenance_duration = 3;
}

/*********************************************************\
 ** Login/Select Packets
\*********************************************************/

message GDAuthLoginPacket {
  uint32 account_id = 1;
  uint32 login_key = 2;
  bytes login = 3;
  bytes hwid = 4;
  bytes social_id = 5;
  repeated uint32 client_keys = 6;
  uint32 bill_type = 7;
  uint32 bill_id = 8;
  repeated int32 premium_times = 9;
  uint32 language = 10;
  uint32 tradeblock = 11;
  uint32 hwid2ban = 12;
  bytes hwid2 = 13;
  bool coins = 14;
  bool temp_login = 15;
}

message GDLoginByKeyPacket {
  bytes login = 1;
  uint32 login_key = 2;
  repeated uint32 client_key = 3;
  bytes ip = 4;
}

message GDPlayerCreatePacket {
  bytes login = 1;
  bytes passwd = 2;
  uint32 account_id = 3;
  uint32 account_index = 4;
  TPlayerTable player_table = 5;
}

message GDPlayerDeletePacket {
  bytes login = 1;
  uint32 player_id = 2;
  uint32 account_index = 3;
  bytes private_code = 4;
}

message GDChangeNamePacket {
  uint32 pid = 1;
  bytes name = 2;
}

message GDEmpireSelectPacket {
  uint32 account_id = 1;
  uint32 empire = 2;
}

message GDSelectUpdateHairPacket {
  uint32 pid = 1;
  uint32 hair_part = 2;
  uint32 hair_base_part = 3;
}

message GDBillingExpirePacket {
  bytes login = 1;
  uint32 bill_type = 2;
  uint32 remain_seconds = 3;
}

message GDBillingCheckPacket {
  repeated uint32 keys = 1;
}

message GDDisconnectPacket {
  bytes login = 1;
}

message GDValidLogoutPacket {
  uint32 account_id = 1;
}

/*********************************************************\
 ** Loading/Save Packets
\*********************************************************/

message GDPlayerLoadPacket {
  uint32 account_id = 1;
  uint32 player_id = 2;
  uint32 account_index = 3;
}

message GDSafeboxLoadPacket {
  uint32 account_id = 1;
  bytes login = 2;
  bytes password = 3;
  bool is_mall = 4;
}

message GDReqHorseNamePacket {
  uint32 pid = 1;
}

message GDPlayerSavePacket {
  TPlayerTable data = 1;
}

message GDItemSavePacket {
  TItemData data = 1;
}

message GDQuestSavePacket {
  repeated TQuestTable datas = 1;
}

message GDPetSavePacket {
  TPetAdvancedTable data = 1;
}

message GDSafeboxSavePacket {
  uint32 account_id = 1;
  uint32 size = 2;
  int64 gold = 3;
  repeated TItemData items = 4;
}

message GDItemDestroyPacket {
  uint32 item_id = 1;
  uint32 pid = 2;
}

message GDSkillColorSavePacket {
  uint32 player_id = 1;
  repeated uint32 skill_colors = 2;
}

message GDPlayerRuneSavePacket {
  uint32 player_id = 1;
  repeated uint32 runes = 2;
}

message GDEquipmentPageDeletePacket {
  uint32 pid = 1;
}

message GDEquipmentPageSavePacket {
  repeated TEquipmentChangerTable pages = 1;
}

/*********************************************************\
 ** Game Packets
\*********************************************************/

message GDFlushCachePacket {
  uint32 pid = 1;
}

message GDItemFlushPacket {
  uint32 item_id = 1;
}

message GDLogoutPacket {
  bytes login = 1;
  bytes passwd = 2;
}

message GDSafeboxChangeSizePacket {
  uint32 account_id = 1;
  uint32 size = 2;
}

message GDSafeboxChangePasswordPacket {
  uint32 account_id = 1;
  bytes old_password = 2;
  bytes new_password = 3;
}

message GDAddAffectPacket {
  uint32 pid = 1;
  TPacketAffectElement elem = 2;
}

message GDRemoveAffectPacket {
  uint32 pid = 1;
  uint32 type = 2;
  uint32 apply_on = 3;
  int32 apply_value = 4;
}

message GDHighscoreRegisterPacket {
  uint32 pid = 1;
  int32 value = 2;
  int32 dir = 3;
  bytes board = 4;
}

message GDSMSPacket {
  bytes from = 1;
  bytes to = 2;
  bytes mobile = 3;
  bytes msg = 4;
}

message GDRequestGuildPrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 guild_id = 3;
  uint32 duration_sec = 4;
}

message GDRequestEmpirePrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 empire = 3;
  uint32 duration_sec = 4;
}

message GDRequestCharacterPrivPacket {
  uint32 type = 1;
  int32 value = 2;
  uint32 pid = 3;
}

message GDMoneyLogPacket {
  uint32 type = 1;
  uint32 vnum = 2;
  int64 gold = 3;
}

message GDSetEventFlagPacket {
  bytes flag_name = 1;
  int32 value = 2;
  bool is_add = 3;
}

message GDCreateObjectPacket {
  uint32 vnum = 1;
  uint32 land_id = 2;
  uint32 map_index = 3;
  int32 x = 4;
  int32 y = 5;
  float rot_x = 6;
  float rot_y = 7;
  float rot_z = 8;
}

message GDDeleteObjectPacket {
  uint32 id = 1;
}

message GDUpdateLandPacket {
  uint32 guild_id = 1;
  uint32 land_id = 2;
}

message GDVCardPacket {
  uint32 id = 1;
  bytes sell_character = 2;
  bytes sell_account = 3;
  bytes buy_character = 4;
  bytes buy_account = 5;
}

message GDBlockChatPacket {
  bytes name = 1;
  int32 duration = 2;
}

message GDMyShopPricelistUpdatePacket {
  uint32 owner_id = 1;
  repeated TItemPriceInfo price_info = 2;
}

message GDMyShopPricelistRequestPacket {
  uint32 pid = 1;
}

message GDUpdateHorseNamePacket {
  uint32 pid = 1;
  bytes horse_name = 2;
}

message GDRequestChargeCashPacket {
  uint32 account_id = 1;
  uint32 amount = 2;
  uint32 charge_type = 3;
}

message GDDeleteAwardIDPacket {
  uint32 id = 1;
}

message GDChannelSwitchPacket {
  uint32 channel = 1;
  uint32 map_index = 2;
}

message GDSpawnMobTimedPacket {
  uint32 mob_vnum = 1;
  uint32 map_index = 2;
  int32 x = 3;
  int32 y = 4;
  uint32 channel = 5;
  int32 target_time = 6;
  int32 despawn_time = 7;
}

message GDForceItemDeletePacket {
  uint32 id = 1;
}

message GDCombatZoneSkillsCachePacket {
  uint32 pid = 1;
  uint32 skill_level1 = 2;
  uint32 skill_level2 = 3;
  uint32 skill_level3 = 4;
  uint32 skill_level4 = 5;
  uint32 skill_level5 = 6;
  uint32 skill_level6 = 7;
}

message GDWhisperPlayerExistCheckPacket {
  uint32 pid = 1;
  bool is_gm = 2;
  bytes target_name = 3;
  bytes message = 4;
}

message GDWhisperPlayerMessageOfflinePacket {
  uint32 pid = 1;
  bool is_gm = 2;
  bytes name = 3;
  bytes target_name = 4;
  bytes message = 5;
}

message GDLoadItemRefundPacket {
  uint32 pid = 1;
}

message GDItemDestroyLogPacket {
  TItemData item = 1;
  uint32 type = 2;
}

message GDItemTimedIgnorePacket {
  uint32 item_id = 1;
  uint32 ignore_duration = 2;
}

/*********************************************************\
 ** Game MARRIAGE Packets
\*********************************************************/

message GDMarriageAddPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  uint32 marry_time = 3;
  bytes name1 = 4;
  bytes name2 = 5;
}

message GDMarriageUpdatePacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  int32 love_point = 3;
  bool married = 4;
}

message GDMarriageRemovePacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message GDMarriageBreakPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message GDWeddingRequestPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

message GDWeddingReadyPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
  uint32 map_index = 3;
}

message GDWeddingEndPacket {
  uint32 pid1 = 1;
  uint32 pid2 = 2;
}

/*********************************************************\
 ** Game PARTY Packets
\*********************************************************/

message GDPartyCreatePacket {
  uint32 leader_pid = 1;
}

message GDPartyDeletePacket {
  uint32 leader_pid = 1;
}

message GDPartyAddPacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 state = 3;
}

message GDPartyRemovePacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
}

message GDPartyStateChangePacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 role = 3;
  bool flag = 4;
}

message GDPartySetMemberLevelPacket {
  uint32 leader_pid = 1;
  uint32 pid = 2;
  uint32 level = 3;
}

/*********************************************************\
 ** Game GUILD Packets
\*********************************************************/

message GDGuildCreatePacket {
  uint32 guild_id = 1;
}

message GDGuildSkillUpdatePacket {
  uint32 guild_id = 1;
  int32 amount = 2;
  repeated uint32 skill_levels = 3;
  uint32 skill_point = 4;
  bool save = 5;
}

message GDGuildExpUpdatePacket {
  uint32 guild_id = 1;
  int32 amount = 2;
}

message GDGuildAddMemberPacket {
  uint32 pid = 1;
  uint32 guild_id = 2;
  uint32 grade = 3;
}

message GDGuildRemoveMemberPacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
}

message GDGuildChangeGradePacket {
  uint32 guild_id = 1;
  uint32 grade = 2;
}

message GDGuildChangeMemberDataPacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  uint32 offer = 3;
  uint32 level = 4;
  uint32 grade = 5;
}

message GDGuildDisbandPacket {
  uint32 guild_id = 1;
}

message GDGuildDungeonPacket {
  uint32 guild_id = 1;
  uint32 channel = 2;
  uint32 map_index = 3;
}

message GDGuildDungeonCDPacket {
  uint32 guild_id = 1;
  uint32 time = 2;
}

message GDGuildWarPacket {
  uint32 type = 1;
  uint32 war = 2;
  uint32 guild_from = 3;
  uint32 guild_to = 4;
  int32 war_price = 5;
  int32 initial_score = 6;
}

message GDGuildWarScorePacket {
  uint32 guild_gain_point = 1;
  uint32 guild_opponent = 2;
  int32 score = 3;
  int32 bet_score = 4;
}

message GDGuildChangeLadderPointPacket {
  uint32 guild_id = 1;
  int32 change = 2;
}

message GDGuildUseSkillPacket {
  uint32 guild_id = 1;
  uint32 skill_vnum = 2;
  uint32 cooltime = 3;
}

message GDGuildDepositMoneyPacket {
  uint32 guild_id = 1;
  int32 gold = 2;
}

message GDGuildWithdrawMoneyPacket {
  uint32 guild_id = 1;
  int32 gold = 2;
}

message GDGuildWithdrawMoneyGiveReplyPacket {
  uint32 guild_id = 1;
  int32 change_gold = 2;
  bool give_success = 3;
}

message GDGuildWarBetPacket {
  uint32 war_id = 1;
  bytes login = 2;
  uint32 gold = 3;
  uint32 guild_id = 4;
}

message GDGuildReqChangeMasterPacket {
  uint32 guild_id = 1;
  uint32 id_from = 2;
  uint32 id_to = 3;
}

message GDGuildSafeboxLoadPacket {
  uint32 guild_id = 1;
}

message GDGuildSafeboxCreatePacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  bytes name = 3;
  uint32 size = 4;
}

message GDGuildSafeboxSizePacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  bytes name = 3;
  uint32 size = 4;
}

message GDGuildSafeboxAddPacket {
  uint32 pid = 1;
  bytes name = 2;
  TItemData item = 3;
}

message GDGuildSafeboxTakePacket {
  uint32 guild_id = 1;
  uint32 pid = 2;
  bytes player_name = 3;
  uint32 source_pos = 4;
  TItemPos target_pos = 5;
}

message GDGuildSafeboxMovePacket {
  uint32 guild_id = 1;
  uint32 source_slot = 2;
  uint32 target_slot = 3;
}

message GDGuildSafeboxGiveGoldPacket {
  uint32 pid = 1;
  bytes name = 2;
  uint32 guild_id = 3;
  uint64 gold = 4;
}

message GDGuildSafeboxGetGoldPacket {
  uint32 pid = 1;
  bytes name = 2;
  uint32 guild_id = 3;
  uint64 gold = 4;
}
